Closed
Bug 858141
Opened 8 years ago
Closed 8 years ago
Assertion failure: false (), at content/media/webspeech/recognition/SpeechRecognition.cpp:188
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: khuey, Assigned: ggp)
Details
(Keywords: assertion, intermittent-failure)
Attachments
(1 file)
915 bytes,
patch
|
smaug
:
review+
johns
:
checkin+
|
Details | Diff | Splinter Review |
Reporter | ||
Updated•8 years ago
|
Keywords: assertion,
intermittent-failure
Assignee | ||
Comment 1•8 years ago
|
||
This looks related to bug 855704 -- it looks like we got some audio data from the sample files during the test (enough so we transitioned to STATE_ESTIMATING), and then timed out after not receiving new data for a while. I don't have a fix for the underlying problem yet, but we shouldn't be asserting either. I'm attaching a patch that makes us properly raise an error event if this ever happens again.
Attachment #739706 -
Flags: review?(bugs)
Updated•8 years ago
|
Attachment #739706 -
Flags: review?(bugs) → review+
Comment 2•8 years ago
|
||
Comment on attachment 739706 [details] [diff] [review] Bug 858141 - Don't assert when getting an audio error while on STATE_ESTIMATING https://hg.mozilla.org/integration/mozilla-inbound/rev/d558c2172bcd
Attachment #739706 -
Flags: checkin+
Comment 3•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/d558c2172bcd
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
Updated•2 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•