Bug 858141 - Don't assert on EVENT_AUDIO_ERROR while on STATE_ESTIMATING. r=smaug